<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="@color/white"
    tools:context=".view.TourActivity">
    <ImageView
        android:id="@+id/tour_image"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:src="@drawable/ic_baseline_home_24"

        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:id="@+id/tour_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tour Title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

            />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/tour_description_tv"
            android:text="Tour Description"/>
    </LinearLayout>

</LinearLayout>