<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
<!--    <TextView-->
<!--        android:gravity="center"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="Home Fragment" />-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <ProgressBar
            android:id="@+id/home_progress_bar"
            android:visibility="invisible"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"


            />
        <TextView
            android:visibility="invisible"
            android:id="@+id/home_response_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="50dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="code"
            />
        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/recycler_view"
            android:padding="4dp"
            android:clipToPadding="false"
            tools:listitem="@layout/item_card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

</FrameLayout>